Add WordPattern Solution